# sql-lineage-tracker

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/ecommerce/: 01_raw_tables.sql  02_staging.sql  03_intermediate.sql  04_mart.sql
examples/mixed/: 01_user_activity.sql  02_finance.sql  03_inventory.sql  04_cross_pipeline.sql  05_ml_features.sql
sqllineage/: __init__.py  cli.py
sqllineage/api/: __init__.py  server.py
sqllineage/core/: __init__.py  extractor.py  models.py  parser.py  resolver.py
sqllineage/web/: app.js  index.html  styles.css
tests/: test_api.py  test_extractor.py  test_parser.py  test_resolver.py
